# halloweeneyes

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  CtrlCHandler.cpp  CtrlCHandler.h  EyeSimulation.cpp  EyeSimulation.h  OpenCV_VLC.cpp  QtEye.cpp  QtEye.h  QtMotion.cpp  QtMotion.h  QtMotionTracking.cpp  QtMotionTracking.h  README.md  SMA.h  arthurwidgets.cpp  arthurwidgets.h  format.sh  qteyemain.cpp  qtmotionmain.cpp  sonar-project.properties  start.sh  travis.yaml  uncrustify.cfg
test/: .gitignore  CMakeLists.txt  OpenCV_VLC.cpp
